added new way to write queries, started rewriting the sql queries to new ones